--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-tesseractocr",
+  "name": "@devinikhiya/react-native-tesseractocr",
   "version": "0.1.0",
-  "description": "test",
+  "description": "React Native Tesseract OCR is a react native module that allows you to use the Tesseract OCR library on Android and iOS.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
