--- a/package.json
+++ b/package.json
@@ -33,6 +33,19 @@
   "keywords": [
     "react-native",
     "ios",
+    "react-native-tesseractocr",
+    "tesseract",
+    "ocr",
+    "react-native-image-to-text",
+    "react-native-ocr",
+    "react-native-tesseract",
+    "react-native-tesseract-ocr",
+    "image-to-text",
+    "react-native-text-fetcher",
+    "react-native-text-reader",
+    "react-native-text-scanner",
+    "react-native-text-to-speech",
+    "react-native-text-to-speech",
     "android"
   ],
   "repository": "https://github.com/Devichand1/react-native-tesseractocr",
